# netclaw-demo

./: .env.example  .gitignore  CLAUDE.md  DEMO-CONTEXT.md  PEERINGEXAMPLE.md  README.md  SOUL.md  USER.md
config/: openclaw-demo.json  openclaw.json
docs/: OLLAMA-DOMAIN-EXPERTS.md  phase6-tasks.md
examples/: 07_cisco_devnet_cml.md
mcp-servers/containerlab-mcp/: .env.example  .gitignore  Dockerfile  README.md  containerlab_mcp_server.py  pyproject.toml  requirements.txt
mcp-servers/containerlab-mcp/src/containerlab_mcp/: __init__.py  __main__.py  access.py  config.py  executor.py  models.py  parser.py  safety.py  server.py  topology.py
mcp-servers/containerlab-mcp/src/containerlab_mcp/tools/: __init__.py  clab_tools.py  monitoring_tools.py  node_tools.py
mcp-servers/containerlab-mcp/tests/: conftest.py
mcp-servers/containerlab-mcp/tests/integration/: conftest.py
mcp-servers/containerlab-mcp/tests/property/: conftest.py  test_access_detect.py  test_config.py  test_discovery.py  test_error_handling.py  test_response_schema.py  test_safety_gate.py  test_schema.py  test_table_parsing.py  test_validation.py
mcp-servers/containerlab-mcp/tests/unit/: conftest.py  test_access.py  test_clab_tools.py  test_config.py  test_executor.py  test_monitoring_tools.py  test_node_tools.py  test_parser.py  test_safety.py  test_topology.py
netshell/: README.md  requirements.txt
observability/: README.md  grafana-dashboard-netclaw-tokens.json  install-vector-demo.sh  sample-trajectory.jsonl  vector.yaml
scripts/: attempt-tracker.py  install.sh  log-streamer.js  setup.sh  (+3 more)
(+146 files in other folders)
