[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "containerlab-mcp"
version = "0.1.0"
description = "A Python MCP server wrapping the ContainerLab CLI for AI agent orchestration"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "asyncssh>=2.14.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.90.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/containerlab_mcp"]
